# gitbar

./: .gitignore  .npmrc  .prettierrc  README.md  bump.sh  components.json  eslint.config.js  lib.rs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.mjs  svelte.config.js  tailwind.config.js  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: publish.yml  test.yml  website.yml
scripts/: gen-ts.mjs
src/: App.svelte  app.css  main.ts  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json  migrated.json
src-tauri/src/: commands.rs  main.rs  main_old.rs  server.rs  system_tray.rs
src-tauri/src/state/: mod.rs
src-tauri/src/state/commands/: github.rs  mod.rs  state.rs
src-tauri/src/state/github/: client.rs
src-tauri/src/state/types/: app_state.rs  auth.rs  github.rs  mod.rs  settings.rs
src/components/: App.svelte  AppSidebar.svelte  AuthGuard.svelte  Filters.svelte  Footer.svelte  Login.svelte  Range.svelte  Reviews.svelte  Settings.svelte  SidebarUser.svelte  Theme.svelte
src/components/experiments/: AppSidebar.svelte  SidebarUser.svelte
src/components/login/: Login.svelte  schema.ts
src/components/review/: Card.svelte  Empty.svelte  PRIcon.svelte  RepoIcon.svelte  StatusBadge.svelte  types.ts  utils.ts
src/lib/: api.ts  app.ts  appState.svelte.ts  auth.svelte.ts  auth.ts  auto-start.ts  constants.ts  formatters.ts  github.ts  storage.ts  utils.ts  validators.ts
src/lib/auth/: AuthProvider.svelte  (+3 more)
src/routes/: +layout.svelte  +page.svelte
src/types/: index.ts
website/: package.json  pnpm-lock.yaml
(+57 files in other folders)
