[package]
name = "gitbar"
version = "0.8.1"
description = "Github review counter"
authors = ["mikael.kristiansson"]
license = "MIT"
repository = "https://github.com/narwhal-apps/gitbar"
default-run = "gitbar"
edition = "2021"
rust-version = "1.67"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
auto-launch = "0.3"
thiserror = "1.0"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
serde = { version = "1.0", features = ["derive"] }
tiny_http = "0.12.0"
ascii = "1.1.0"
tauri = { version = "2", features = ["tray-icon", "image-png",
] }
port_scanner = "*"
tauri-plugin-notification = "2"
tauri-plugin-http = "2"
tauri-plugin-shell = "2"
dark-light = "1.1.1"
tauri-plugin-devtools = "2.0.0"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24"
objc = "0.2.7"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-autostart = "2"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
